<?xml version="1.0" encoding="utf-8"?><!--
  Copyright (C) 2014 The Android Open Source Project

  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at

       http://www.apache.org/licenses/LICENSE-2.0

  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
  -->
<resources>

    <string name="app_name">NetPod</string>
    <string name="favorite">Favorite</string>
    <string name="error_no_metadata">Unable to retrieve metadata.</string>
    <string name="browse_genres">Genres</string>
    <string name="browse_genre_subtitle">Songs by genre</string>
    <string name="browse_musics_by_genre_subtitle">%1$s songs</string>
    <string name="random_queue_title">Random music</string>
    <string name="error_no_connection">Cannot connect to server. Please, check your Internet connectivity.</string>
    <string name="error_loading_media">Error Loading Media</string>
    <string name="casting_to_device">Casting to %1$s</string>
    <string name="currently_playing_song">Song currently playing</string>
    <string name="currently_playing_artist">Artist of currently playing song</string>
    <string name="currently_playing_extra_info">Extra info for currently playing song</string>
    <string name="play_item">Play item</string>
    <string name="play_pause">play or pause</string>
    <string name="skip_next">skip to next</string>
    <string name="skip_prev">skip to previous</string>
    <string name="touch_to_cast">Touch to connect to a Google Cast device</string>
    <!-- Use the default receiver. To customize a styled media receiver, you can use
         the css and images under <project-root>/docs/cast_styled_receiver -->
    <string name="cast_application_id">CC1AD845</string>
    <string name="home_title">Home</string>
    <string name="related_content_header">You may also like</string>
    <string name="action_listen">Listen</string>
    <string name="open_content_drawer">Open the main menu</string>
    <string name="close_content_drawer">Close the main menu</string>


    <string name="drawer_latest_title">Latest</string>
    <string name="drawer_discover_title">Discover</string>
    <string name="drawer_allmusic_title">All Music</string>
    <string name="drawer_playlists_title">Playlists</string>
    <string name="drawer_categories_title">Categories</string>
    <string name="drawer_logout">Log Out</string>
    <string name="placeholder_message">Coming Soon...</string>


    <string name="now_playing">Now Playing</string>
    <string name="background_image_str">Background image for album art</string>
    <string name="search_queue_title">Search results</string>
    <string name="no_search_results">No search results.</string>
    <string name="loading">Loading…</string>
    <string name="media_route_menu_title">Play on…</string>
    <string name="prompt_login">"Please provide your Mobile number to \n             Login/Sign up on NetPod"</string>
    <string name="prompt_token">"Please enter verification code\n Sent to %1$s"</string>
    <string name="phone_number_hint">Phone Number</string>
    <string name="token_hint">Verification Code</string>
    <string name="token_btn_cta">Continue</string>
    <string name="verify_btn_cta">Verify</string>
    <string name="title_activity_home">Podcast</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_category">Category</string>


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>


    <string name="favourites_file_name">favourites</string>
    <string name="title_activity_news">News</string>
    <string name="title_activity_favorite">Favorite</string>
    <string name="title_activity_trend">Trend</string>
    <string name="castio">NetPod</string>
    <string name="title_activity_news_detail">News</string>

    <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>


    <string name="title_activity_podcast">Episodes</string>

    <string name="file_not_found">File not found</string>
    <string name="title_activity_offline_podcast">Downloads</string>
    <string name="notification_title">Podcast playing</string>
    <string name="notification_subtitle">Radio App Name</string>
    <string name="error_podcast">You are not saved in the podcasts offline</string>
    <string name="title_activity_category_chooser">CategoryChooser</string>


</resources>
