<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinator_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_gradient"
    tools:context="com.betazoo.podcast.ui.LoginActivity"
    >
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">



    <android.support.v7.widget.AppCompatImageView
        android:id="@+id/logo"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:paddingRight="24dp"
        android:paddingLeft="24dp"
        android:adjustViewBounds="true"
        />

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/prompt_phone_number_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/prompt_login"
        android:layout_below="@+id/logo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="24dp"
        android:textSize="15sp"
        android:textColor="@color/white"
        />


        <LinearLayout
            android:id="@+id/phone_number_container"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@+id/prompt_phone_number_txt"
            android:layout_marginRight="40dp"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="24dp"
            android:orientation="horizontal"
            android:background="@drawable/rounded_rectangle"
            >

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/phone_number_hint"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/phone_number_hint"
                android:textColor="@color/grey_10"
                android:textStyle="bold"
                />

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/phone_number_txt"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="end"
                android:textColor="@android:color/black"
                android:textSize="15sp"
                android:inputType="phone"
                android:digits="0123456789+"
                android:imeOptions="actionDone"
                />

        </LinearLayout>




    <android.support.v7.widget.AppCompatButton
        android:id="@+id/token_button"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/phone_number_container"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="24dp"
        android:layout_marginRight="40dp"
        android:layout_marginLeft="40dp"
        android:background="@drawable/rounded_button"
        android:textColor="@android:color/white"
        android:text="@string/token_btn_cta"
        android:textAllCaps="false"
        android:textSize="15sp"
        android:enabled="false"
        android:onClick="onClick"
        />

    <com.wang.avi.AVLoadingIndicatorView
        android:id="@+id/loader_indicator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:indicatorName="BallPulseIndicator"
        android:layout_below="@+id/phone_number_container"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="24dp"
        android:visibility="invisible"

        />

</RelativeLayout>
    </android.support.design.widget.CoordinatorLayout>
